--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <nav
       class="navbar navbar-expand-sm navbar-light border fixed-top bg-white" style="height: 54px;">   
-      <!-- navbar sabitlendi height: 54px-->
+      <!-- navbar sabitlendi height: 54px margin-left-->
       <div class="logo" style="margin-left: 192px;">
             <a class="navbar-brand" href="#">
               <img
